2001-12-14  James Henstridge  <james@daa.com.au>

	* examples/gobject/signal.py: use __gsignals__ notation here.

	* gobjectmodule.c (create_signal, add_signals): helper routines
	for handling __gsignals__ attribute of classes.
	(pyg_type_register): add support for creating signals as part of
	type registration.

2001-12-14  Johan Dahlin  <jdahlin@telia.com>

	* gtk/gtk.override (_wrap_gtk_window_get_position): 
	(_wrap_gtk_window_get_size): 
	(_wrap_gtk_window_get_default_size): Impl.

	* gtk/gtk-types.defs (FileSelection): Added fields.

	* gtk/gtk.defs (gtk_pixmap_new): Fix deprecation warning. GtkPixbuf->GdkPixbuf
	* gtk/gtk.defs (set_usize): dito, set_default_size -> set_size_request

2001-12-12  Matt Wilson  <msw@redhat.com>

	* gobjectmodule.c (pyg_closure_marshal,
	pyg_signal_class_closure_marshal): always print and clear the
	exceptions in callback marshalers.  People who want to catch these
	exceptions and make them fatal should use sys.excepthook.
	(pyg_fatal_exceptions_notify, pyg_fatal_exceptions_notify_add,
	pyg_fatal_exceptions_remove): remove now unused functions.  Also
	remove them from the PyGObject_API.
	
	* gtk/pygtk.h (PyGtk_FatalExceptions): remove.

	* gtk/pygtk-private.h (PyGtk_FatalExceptions): remove.

	* gtk/gtkmodule.c (init_gtk): don't bother with
	PYGTK_FATAL_EXCEPTIONS.
	(pygtk_main_quit): remove unused code.

	* gtk/gtk.override (_wrap_gtk_item_factory_create_items,
	_wrap_gtk_menu_popup): likewise, always print and clear the
	exception.

2001-12-11  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.defs: added deprecation messages
	
	* codegen/definitions.py (FunctionDef.write_defs,
	MethodDef.write_defs): write out deprecation messages if they
	exist
	(MethodDef.__init__, FunctionDef.__init__): parse deprecated tags
	in defs file, added some sanity checking and error reporting

	* codegen/codegen.py (write_method, write_constructor,
	write_function): write out deprecation warning messages.

2001-12-11  James Henstridge  <james@daa.com.au>
