@@ -1,5 +1,10 @@
 2001-12-14  James Henstridge  <james@daa.com.au>
 
+	* gobjectmodule.c (override_signal): another helper function for
+	overriding existing signals.  Haven't done chaining support yet.
+	(add_signals): if value in __gsignals__ dict is None or
+	'override', then call override_signal instead.
+
 	* examples/gobject/signal.py: use __gsignals__ notation here.
 
 	* gobjectmodule.c (create_signal, add_signals): helper routines
